Fixed Z-Index for hover image on Webcomics Homepage

--- a/assets/css/components/_webcomics.scss
+++ b/assets/css/components/_webcomics.scss
@@ -71,7 +71,7 @@ section.section-webcomics {
     top: 0;
     width: 100%;
     height: 200px;
-    //z-index: 5;
+    z-index: 5;
     background: $image-hover;
     opacity: 0;
   }
